--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,55 +2,48 @@ version: '3.1'
 services:
   stats-server:
     build: stat_svc/stat_server
-    image: ewm-stat
-    container_name: ewm-stat
+    image: stat-server
+    container_name: stat-server
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
-    volumes:
-          - /etc/timezone:/etc/timezone:ro
-          - /etc/localtime:/etc/localtime:ro
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/exploreWithMeStat?user=user&password=user
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
 
   stats-db:
     image: postgres:14-alpine
     container_name: stats-db
     ports:
-      - "6543:5432"
-    volumes:
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
+      - "6551:5432"
     environment:
-      - POSTGRES_DB=exploreWithMeStat
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=user
+      - POSTGRES_DB=stats-db
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - TZ=GMT
 
   ewm-service:
     build: main_svc
-    image: ewm-main
-    container_name: ewm-main
+    image: main-service
+    container_name: main-service
     ports:
       - "8080:8080"
     depends_on:
+      - stats-server
       - ewm-db
-    volumes:
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/exploreWithMe?user=userdb&password=userdb
-      - STAT_SERVER_URL=http://ewm-stat:9090
+      - STAT_SERVER_URL=http://stats-server:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-db
 
   ewm-db:
     image: postgres:14-alpine
     container_name: ewm-db
     ports:
-      - "6542:5432"
-    volumes:
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
+      - "6541:5432"
     environment:
-      - POSTGRES_DB=exploreWithMe
-      - POSTGRES_USER=userdb
-      - POSTGRES_PASSWORD=userdb
+      - POSTGRES_DB=ewm-db
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - TZ=GMT
