--- a/stat_svc/stat_server/src/main/resources/application.properties
+++ b/stat_svc/stat_server/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.sql.init.mode=always
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:6542/stats-db
+spring.datasource.username=root
+spring.datasource.password=root
